# SergD_Land-Real-Estate-Agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
ground_finder/: cli.py  config.py  pipeline.py  storage.py
ground_finder/enrichment/: dadata.py  geo.py  nominatim.py  osrm.py  rosreestr.py
ground_finder/llm/: client.py  extract_cadastral.py  extract_listing.py
ground_finder/sources/: avito.py  cian.py  cian_cloak.py  dom_rf.py
scripts/: export_top.py  geocode_dadata.py  geocode_fallback.py  llm_extract_batch.py  recalc_drive_osrm.py  reenrich_rosreestr.py  report.py
