[project]
name = "ground-finder"
version = "0.1.0"
description = "Aggregator of land plot listings near Yekaterinburg for IZHS construction"
requires-python = ">=3.11"
dependencies = [
    "cianparser>=1.0.4",
    "rosreestr2coord>=5.3.3",
    "pandas>=2.0",
    "geopy>=2.4",
    "httpx>=0.27",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
ground-finder = "ground_finder.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ground_finder*"]
